--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-lang3-3.0-beta.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-async-http-1.4.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
