--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.yin.myhealthy.MainActivity"
+            android:name="com.yin.myhealthy.view.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.yin.myhealthy.view.ContextActivity" />
+        <activity android:name="com.yin.myhealthy.MainActivity" />
+        
+        
     </application>
 
 </manifest>
