1.优化内容页的界面 2.优化下拉刷新的ListView的界面 3.为饮食内容自定义独立的实体类和ContextActivity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,8 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.yin.myhealthy.view.ContextActivity" />
+        
         <activity android:name="com.yin.myhealthy.MainActivity" />
+        <activity android:name="com.yin.myhealthy.view.NewsContextActivity" />
+        <activity android:name="com.yin.myhealthy.view.DietContextActivity" />
         
         
     </application>
