1.新增药箱页面ListBean,ContextBean,SingleContextActivity等，除了导航条，其他都实现

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name="com.yin.myhealthy.MainActivity" />
         <activity android:name="com.yin.myhealthy.view.NewsContextActivity" />
         <activity android:name="com.yin.myhealthy.view.DietContextActivity" />
+        <activity android:name="com.yin.myhealthy.view.MedicineContextActivity" />
         
         
     </application>
