1.基本完成百科页面的viewpager,bean等构建，除了顶部导航栏，其他都能显示 2.对各个singleFragment进行处理，假如listview全部数据都加载完毕，会弹出toast消息说数据加载完毕

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name="com.yin.myhealthy.view.NewsContextActivity" />
         <activity android:name="com.yin.myhealthy.view.DietContextActivity" />
         <activity android:name="com.yin.myhealthy.view.MedicineContextActivity" />
-        
+        <activity android:name="com.yin.myhealthy.view.KnowledgeContextActivity" />
         
     </application>
 
