--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:name="com.yin.myhealthy.HealthyApplication" 
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon_1"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
